app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebsite-service
spec:
  type: ClusterIP
  selector:
    app: mywebsite
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 5000
